Fix compile warnings. Enable error on compile warn